Implemented email system

--- a/src/app/assets/themes/themes.scss
+++ b/src/app/assets/themes/themes.scss
@@ -25,3 +25,19 @@ $grey-12: #333333;
 $grey-13: #222222;
 $grey-14: #111111;
 $black: #000000;
+
+// Auxiliary
+
+$warning: #17b1c8;
+$alert: #cc8d16;
+$error: #f54343;
+
+// Esto son posibles ideas
+// $border-radius: 10px;
+// $transition-duration: 0.3s;
+// $shadow-color: rgba(0, 0, 0, 0.2);
+
+// Fuentes
+
+// $font-family-primary: 'Poppins', sans-serif;
+// $font-family-secondary: 'Montserrat', sans-serif;
