--- a/src/app/assets/fonts/fonts.scss
+++ b/src/app/assets/fonts/fonts.scss
@@ -5,7 +5,7 @@
 }
 
 @font-face {
-  font-family: "OpenSans";
+  font-family: "Lato";
   font-display: swap;
-  src: url("./OpenSans.ttf") format("truetype");
+  src: url("./Lato-Light.ttf") format("truetype");
 }
