--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,10 +62,14 @@ h6 {
 }
 
 p,
+b,
 strong,
-b {
+label,
+input,
+textarea,
+span {
   color: $grey-13;
-  font-family: "OpenSans", sans-serif;
+  font-family: "Lato", sans-serif;
   &::selection {
     color: $white;
     background: $grey-06;
