--- a/src/app/home/components/sections/contact/contact.component.html
+++ b/src/app/home/components/sections/contact/contact.component.html
@@ -1,5 +1,5 @@
-<section id="contact">
-  <article>
+<section id="contact" class="box-container">
+  <article class="box-content">
     <h3>Contacto</h3>
     <hr />
     <div class="contact">
