--- a/src/app/home/components/sections/experience/experience.component.html
+++ b/src/app/home/components/sections/experience/experience.component.html
@@ -1,5 +1,5 @@
-<section id="experience">
-  <article>
+<section id="experience" class="box-container">
+  <article class="box-content">
     <h3>Experiencia</h3>
     <hr />
     <div class="experience">
