--- a/src/app/home/components/sections/technologies/technologies.component.html
+++ b/src/app/home/components/sections/technologies/technologies.component.html
@@ -1,5 +1,5 @@
-<section id="technologies">
-  <article>
+<section id="technologies" class="box-container">
+  <article class="box-content">
     <h3>Tecnologías</h3>
     <hr />
     <div class="grid">
