--- a/src/app/home/components/sections/technologies/technologies.component.scss
+++ b/src/app/home/components/sections/technologies/technologies.component.scss
@@ -6,10 +6,6 @@ section#technologies {
   padding: 1.5rem 5rem;
   background: $grey-13;
   min-height: 30rem;
-
-  .technologies {
-    padding-inline: 2rem;
-  }
 }
 
 .grid {
@@ -28,10 +24,6 @@ section#technologies {
     background-color: $grey-12;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
 
-    p {
-      color: $white;
-    }
-
     &:hover {
       cursor: pointer;
       transform: translateY(-5px);
@@ -45,7 +37,7 @@ section#technologies {
     justify-content: center;
     article {
       max-width: $max-content-width;
-      min-width: min(100%, $desktop-breakpoint);
+      min-width: min(100%, $max-content-width);
     }
   }
 }
@@ -62,8 +54,5 @@ section#technologies {
 
 @media (max-width: $mobile-breakpoint) {
   section#technologies {
-    .technologies {
-      padding-inline: 1rem;
-    }
   }
 }
