--- a/src/app/home/layout/footer/footer.component.html
+++ b/src/app/home/layout/footer/footer.component.html
@@ -1,11 +1,11 @@
-<footer>
-  <div class="footer-container">
+<footer class="box-container">
+  <div class="box-content">
     <h3>Gracias por visitar mi web!</h3>
-    <h4>No dudes en ponerte en contacto conmigo. ¡Hasta pronto!</h4>
+    <p>No dudes en ponerte en contacto conmigo. ¡Hasta pronto!</p>
     <div class="footer-info-container">
-      <div class="contact-section">
+      <div>
         <!-- CONTACT -->
-        <h3>Contacto</h3>
+        <h4>Contacto</h4>
         <ul>
           <!-- PHONE -->
           <li>
@@ -24,8 +24,8 @@
           </li>
         </ul>
       </div>
-      <div class="links-section">
-        <h3>Enlaces de Interés</h3>
+      <div>
+        <h4>Enlaces de Interés</h4>
         <ul>
           <!-- LINKEDIN -->
           <li>
@@ -44,29 +44,29 @@
           </li>
         </ul>
       </div>
-      <div class="section acessibility-section">
+      <div>
         <!-- ACCESIBILITY -->
-        <h3>Accesibilidad</h3>
+        <h4>Accesibilidad</h4>
         <ul>
           <!-- LANGUAGE SELECTOR -->
           <li class="space-between">
-            <h4>Idioma</h4>
+            <p>Idioma</p>
             <app-lang-selector></app-lang-selector>
           </li>
 
           <!-- THEME SLIDER -->
           <li class="space-between">
-            <h4>Tema</h4>
+            <p>Tema</p>
             <app-theme-toggle-slider></app-theme-toggle-slider>
           </li>
         </ul>
       </div>
     </div>
-  </div>
-  <div class="sub-footer-container">
-    <h5>
-      © 1998 - 2023 | José Manuel Rodríguez Camacho - Web Developer | Todos los
-      derechos reservados
-    </h5>
+    <div>
+      <h5>
+        © 1998 - 2024 | José Manuel Rodríguez Camacho - Web Developer | Todos
+        los derechos reservados
+      </h5>
+    </div>
   </div>
 </footer>
