--- a/src/app/home/components/sections/about-me/about-me.component.html
+++ b/src/app/home/components/sections/about-me/about-me.component.html
@@ -1,5 +1,5 @@
-<section id="about-me">
-  <article>
+<section id="about-me" class="box-container">
+  <article class="box-content">
     <h3>Sobre Mí</h3>
     <hr />
     <div class="about-me">
