--- a/src/app/home/components/sections/education/education.component.html
+++ b/src/app/home/components/sections/education/education.component.html
@@ -1,5 +1,5 @@
-<section id="education">
-  <article>
+<section id="education" class="box-container">
+  <article class="box-content">
     <h3>Formación</h3>
     <hr />
     <div class="education">
