--- a/src/app/home/components/sections/education/education.component.scss
+++ b/src/app/home/components/sections/education/education.component.scss
@@ -1,9 +1,7 @@
-@import "../../../../assets/themes/themes.scss";
-@import "../../../../assets/themes/breakpoints.scss";
+@import "src/app/assets/themes/themes.scss";
+@import "src/app/assets/themes/breakpoints.scss";
 
 section#education {
-  scroll-margin-top: 5rem;
-  padding: 1.5rem 5rem;
   background: $grey-14;
   .education {
     padding-left: 2rem;
@@ -12,25 +10,6 @@ section#education {
 
 .description {
   padding-left: 2rem;
-  p {
-    color: $white;
-  }
-}
-
-@media (min-width: $desktop-breakpoint) {
-  section#education {
-    display: flex;
-    justify-content: center;
-    article {
-      max-width: $max-content-width;
-    }
-  }
-}
-
-@media (max-width: $tablet-breakpoint) {
-  section#education {
-    padding: 1.5rem 2rem;
-  }
 }
 
 @media (max-width: $mobile-breakpoint) {
@@ -39,6 +18,7 @@ section#education {
       padding-left: 1rem;
     }
   }
+
   .description {
     padding-left: 1rem;
   }
