--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,6 @@
 @import "normalize.css";
 @import "./app/assets/themes/themes.scss";
-
-// * {
-// }
+@import "./app/assets/themes/breakpoints.scss";
 
 html {
   scroll-behavior: smooth;
@@ -12,7 +10,8 @@ html {
 //}
 
 h1,
-h2 {
+h2,
+h5 {
   font-family: "PoiretOne", sans-serif;
   color: $white;
   &::selection {
@@ -21,9 +20,7 @@ h2 {
 }
 
 h3,
-h4,
-h5,
-h6 {
+h4 {
   font-family: "PoiretOne", sans-serif;
   color: $d-primary-color;
   &::selection {
@@ -57,10 +54,6 @@ h5 {
   margin: 1rem 0rem;
 }
 
-h6 {
-  font-size: 1rem;
-}
-
 p,
 b,
 strong,
@@ -68,10 +61,9 @@ label,
 input,
 textarea,
 span {
-  color: $grey-13;
+  color: $white;
   font-family: "Lato", sans-serif;
   &::selection {
-    color: $white;
     background: $grey-06;
   }
 }
@@ -100,4 +92,27 @@ a {
 ul {
   list-style: none;
   padding: 0;
+}
+
+// Responsive Boxes
+.box-container {
+  scroll-margin-top: 5rem;
+  padding: 1.5rem 5rem;
+}
+
+@media (min-width: $desktop-breakpoint) {
+  .box-container {
+    display: flex;
+    justify-content: center;
+    .box-content {
+      max-width: $max-content-width;
+      min-width: min(100%, $max-content-width);
+    }
+  }
+}
+
+@media (max-width: $tablet-breakpoint) {
+  .box-container {
+    padding: 1.5rem 2rem;
+  }
 }
