Avances maquetacion: timeline y about-me image

--- a/src/app/home/components/sections/about-me/about-me.component.html
+++ b/src/app/home/components/sections/about-me/about-me.component.html
@@ -2,21 +2,30 @@
   <article class="box-content">
     <h3>Sobre Mí</h3>
     <hr />
+
     <div class="about-me">
-      <p>
-        Desarrollador Web Full-Stack con más de 2 años de experiencia y amplios
-        conocimientos en tecnologías web, tales como Angular, Java o Spring.
-        Ingeniero Informático (especialidad en Computadores) por la E.T.S.I. de
-        la Universidad de Huelva.
-      </p>
-      <p>
-        Mi enfoque metodológico se basa en el uso de las mejores prácticas para
-        entregar soluciones que aporten el mayor valor posible con las máximas
-        garantías de escalabilidad, rendimiento y seguridad. Además, me
-        considero una persona responsable, implicada y muy constante e intento
-        siempre aportar mis ideas y mantener un aprendizaje continuo para crecer
-        como profesional día a día.
-      </p>
+      <img src="assets/images/desktop.png" alt="A computer in a Desktop" />
+      <div>
+        <p>
+          <strong>Desarrollador Web Full-Stack</strong> Desarrollador Web
+          Full-Stack con más de <strong>2 años de experiencia</strong> y amplios
+          conocimientos en tecnologías web, tales como
+          <strong>Angular, Java o Spring</strong>. Ingeniero Informático
+          (especialidad en Computadores) por la E.T.S.I. de la Universidad de
+          Huelva.
+        </p>
+        <p>
+          En mis proyectos siempre busco aplica las mejores prácticas para crear
+          <strong>soluciones eficaces</strong>, garantizando un software
+          <strong>escalable, robusto y de calidad</strong>.
+        </p>
+
+        <p>
+          Soy una persona <strong>implicada, proactiva y abierta</strong>, y
+          disfruto colaborando con equipos multidisciplinares, aportando ideas y
+          creciendo profesionalmente.
+        </p>
+      </div>
     </div>
   </article>
 </section>
