Refactor box-main-content + timeline abstraction

--- a/src/app/home/components/sections/about-me/about-me.component.html
+++ b/src/app/home/components/sections/about-me/about-me.component.html
@@ -2,17 +2,15 @@
   <article class="box-content">
     <h3>Sobre Mí</h3>
     <hr />
-
-    <div class="about-me">
+    <div class="box-main-content about-me-container">
       <img src="assets/images/desktop.png" alt="A computer in a Desktop" />
       <div>
         <p>
-          <strong>Desarrollador Web Full-Stack</strong> Desarrollador Web
-          Full-Stack con más de <strong>2 años de experiencia</strong> y amplios
-          conocimientos en tecnologías web, tales como
-          <strong>Angular, Java o Spring</strong>. Ingeniero Informático
-          (especialidad en Computadores) por la E.T.S.I. de la Universidad de
-          Huelva.
+          <strong>Desarrollador Web Full-Stack</strong> con más de
+          <strong>2 años de experiencia</strong> y amplios conocimientos en
+          tecnologías web, tales como <strong>Angular, Java o Spring</strong>.
+          Ingeniero Informático (especialidad en Computadores) por la E.T.S.I.
+          de la Universidad de Huelva.
         </p>
         <p>
           En mis proyectos siempre busco aplica las mejores prácticas para crear
