--- a/src/app/home/components/sections/contact/contact.component.html
+++ b/src/app/home/components/sections/contact/contact.component.html
@@ -2,7 +2,7 @@
   <article class="box-content">
     <h3>Contacto</h3>
     <hr />
-    <div class="contact">
+    <div class="box-main-content">
       <form [formGroup]="contactForm">
         <div>
           <label for="name">Nombre: * </label>
