--- a/src/app/home/components/sections/curriculum/curriculum.component.html
+++ b/src/app/home/components/sections/curriculum/curriculum.component.html
@@ -2,7 +2,7 @@
   <article class="box-content">
     <h3>Currículum Vitae</h3>
     <hr />
-    <div class="curriculum">
+    <div class="box-main-content">
       <p>
         ¿Te interesa saber más sobre mi? Descarga mi CV y explora mis
         habilidades, proyectos y logros profesionales ¡No dudes en contactarme!
