--- a/src/app/home/components/sections/technologies/technologies.component.html
+++ b/src/app/home/components/sections/technologies/technologies.component.html
@@ -2,7 +2,7 @@
   <article class="box-content">
     <h3>Tecnologías</h3>
     <hr />
-    <div class="grid">
+    <div class="box-main-content grid">
       @for(tech of technologies; track $index){
       <div class="item">
         <app-svg-icon
