--- a/src/app/home/layout/footer/footer.component.html
+++ b/src/app/home/layout/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="box-content">
     <h3>Gracias por visitar mi web!</h3>
     <p>No dudes en ponerte en contacto conmigo. ¡Hasta pronto!</p>
-    <div class="footer-info-container">
+    <div class="box-main-content footer-info-container">
       <div>
         <!-- CONTACT -->
         <h4>Contacto</h4>
