--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 @import "normalize.css";
 @import "./app/assets/themes/themes.scss";
 @import "./app/assets/themes/breakpoints.scss";
+@import "./assets/styles/responsive-boxes.scss";
+@import "./assets/styles/timeline.scss";
 
 html {
   scroll-behavior: smooth;
@@ -92,39 +94,4 @@ a {
 ul {
   list-style: none;
   padding: 0;
-}
-
-// Responsive Boxes
-.box-container {
-  scroll-margin-top: 5rem;
-  padding: 1.5rem 5rem;
-}
-
-@media (min-width: $desktop-breakpoint) {
-  .box-container {
-    display: flex;
-    justify-content: center;
-    .box-content {
-      max-width: $max-content-width;
-      min-width: min(100%, $max-content-width);
-    }
-  }
-}
-
-@media (max-width: $tablet-breakpoint) {
-  .box-container {
-    padding: 1.5rem 2rem;
-  }
-}
-
-@media (max-width: $mobile-breakpoint) {
-  .box-container {
-    padding: 1.5rem 1.25rem;
-  }
-}
-
-@media (max-width: $mobile-sm-breakpoint) {
-  .box-container {
-    padding: 1.5rem 1rem;
-  }
 }
