--- a/src/app/home/components/sections/about-me/about-me.component.scss
+++ b/src/app/home/components/sections/about-me/about-me.component.scss
@@ -3,8 +3,7 @@
 
 section#about-me {
   background: $grey-14;
-  .about-me {
-    padding-inline: 2rem;
+  .about-me-container {
     display: flex;
     gap: 2rem;
 
@@ -19,21 +18,13 @@ section#about-me {
 
 @media (max-width: $laptop-breakpoint) {
   section#about-me {
-    .about-me {
+    .about-me-container {
       flex-direction: column;
       align-items: center;
       gap: 0rem;
       img {
         width: 100%;
       }
-    }
-  }
-}
-
-@media (max-width: $mobile-breakpoint) {
-  section#about-me {
-    .about-me {
-      padding-inline: 1rem;
     }
   }
 }
