--- a/src/app/home/components/sections/education/education.component.html
+++ b/src/app/home/components/sections/education/education.component.html
@@ -2,26 +2,16 @@
   <article class="box-content">
     <h3>Formación</h3>
     <hr />
-    <div class="education">
-      <div>
-        <h4>Grado en Ingeniería Informatica</h4>
-        <h5>Universidad de Huelva</h5>
-        <div class="description">
-          <p>T.F.G.: Arquitectura de Computador basada en Acumulador</p>
-        </div>
-      </div>
-      <div>
-        <h4>Bachillerato Bilingüe, Ciencias y Tecnologias</h4>
-        <h5>I.E.S. Catedrático Pulido Rubio</h5>
-        <div class="description">
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum eius
-            blanditiis dolorum reprehenderit asperiores pariatur, non libero
-            aspernatur omnis. Dolores quod cum delectus eligendi qui nobis
-            commodi nesciunt voluptas sit.
-          </p>
-        </div>
-      </div>
+    <div class="box-main-content">
+      <ul>
+        <li *ngFor="let item of educationList" class="timeline-item">
+          <h4 class="timeline-item-title">{{ item.title }}</h4>
+          <h5>{{ item.date }}</h5>
+          <div class="description">
+            <p>{{ item.description }}</p>
+          </div>
+        </li>
+      </ul>
     </div>
   </article>
 </section>
