README,  ajustes CSS y to-top btn provisional

--- a/src/app/home/components/sections/contact/contact.component.html
+++ b/src/app/home/components/sections/contact/contact.component.html
@@ -52,7 +52,11 @@
           }
         </div>
 
-        <button [disabled]="contactForm.invalid" (click)="sendEmail()">
+        <button
+          class="btn"
+          [disabled]="contactForm.invalid"
+          (click)="sendEmail()"
+        >
           Enviar
         </button>
       </form>
