--- a/src/app/home/components/sections/curriculum/curriculum.component.html
+++ b/src/app/home/components/sections/curriculum/curriculum.component.html
@@ -8,9 +8,7 @@
         habilidades, proyectos y logros profesionales ¡No dudes en contactarme!
       </p>
       <div class="btn-container">
-        <button class="btn-download" (click)="downloadFile()">
-          Descargar CV
-        </button>
+        <button class="btn" (click)="downloadFile()">Descargar CV</button>
         <a
           #link
           id="link"
