--- a/src/app/home/components/sections/title/title.component.html
+++ b/src/app/home/components/sections/title/title.component.html
@@ -1,7 +1,10 @@
 <section id="home">
-  <div class="header-container">
-    <div class="header-title">
-      <h1>José Manuel Rodríguez Camacho</h1>
+  <div class="box-container">
+    <div class="box-content">
+      <h1>
+        José Manuel <br />
+        Rodríguez Camacho
+      </h1>
       <h2>Full-Stack Web Developer</h2>
       <p>¡Bienvenido a mi página web!</p>
       <div class="links">
@@ -35,8 +38,8 @@
         </a>
       </div>
     </div>
-  </div>
-  <div class="arrow-container">
-    <div class="arrow-down"></div>
+    <!-- <div class="arrow-container">
+      <div class="arrow-down"></div>
+    </div> -->
   </div>
 </section>
