--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 @import "./app/assets/themes/breakpoints.scss";
 @import "./assets/styles/responsive-boxes.scss";
 @import "./assets/styles/timeline.scss";
+@import "./assets/styles/btn.scss";
 
 html {
   scroll-behavior: smooth;
