--- a/src/app/home/components/sections/contact/contact.component.scss
+++ b/src/app/home/components/sections/contact/contact.component.scss
@@ -25,7 +25,8 @@ form {
       background: $grey-12;
       height: 2rem;
       padding: 0.5rem;
-      border: 2px solid $grey-06;
+      border: 1px solid $grey-06;
+      border-radius: 0.25rem;
     }
 
     &.message {
@@ -38,24 +39,13 @@ form {
         padding: 0.5rem;
         color: $white;
         background: $grey-12;
+        border: 1px solid $grey-06;
+        border-radius: 0.25rem;
       }
     }
-    span.error {
+    .error {
       color: $error;
       font-size: 0.75rem;
-    }
-  }
-
-  button {
-    grid-column: span 2;
-    width: 10rem;
-    justify-self: self-end;
-    padding: 0.75rem 1rem;
-    margin-top: 16px;
-    background: $black;
-    &:disabled {
-      background: $grey-09;
-      cursor: not-allowed;
     }
   }
 }
