--- a/src/app/home/components/sections/title/title.component.scss
+++ b/src/app/home/components/sections/title/title.component.scss
@@ -1,11 +1,8 @@
 @import "./../../../../assets/themes/themes.scss";
+@import "../../../../assets/themes/breakpoints.scss";
 
 section#home {
   height: 100vh;
-}
-
-.header-container {
-  padding: 0rem 5rem;
 }
 
 .links {
@@ -29,11 +26,6 @@ section#home {
   }
 }
 
-@media (max-width: 768px) {
-  .header-container {
-    padding: 0rem 2rem;
-  }
-}
 .arrow-container {
   display: flex;
   justify-content: center;
@@ -41,13 +33,6 @@ section#home {
     width: 100px;
     height: 100px;
     background-color: $white;
-    clip-path: polygon(
-      50% 57%,
-      95% 38%,
-      80% 38%,
-      50% 50%,
-      20% 38%,
-      5% 38%
-    ); //clip-path: polygon(0 38%, 50% 50%, 100% 38%, 100% 45%, 50% 57%, 0 45%);
+    clip-path: polygon(50% 57%, 95% 38%, 80% 38%, 50% 50%, 20% 38%, 5% 38%);
   }
 }
